# ART-Pi_Demo

./: .mxproject  CMakeLists.txt  Firmware.ioc  README.md  STM32H750XX_FLASH.ld  STM32H7_WHD_Demo.ioc  stm32h750b-disco.cfg
App/: Task_Wifi.c  Task_Wifi.h
App/Inc/: Task_BlueTooth.h  Task_Debug.h
App/Src/: Task_BlueTooth.c  Task_Debug.c  Task_Wifi.c
Core/Inc/: FreeRTOSConfig.h  cybsp.h  lwipopts.h  main.h  sdmmc.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h  tim.h
Core/Src/: gpio.c  main.c  sdmmc.c  sdram_fmc_drv.c  stm32h7xx_it.c  sysmem.c  tim.c  usart.c
Drivers/STM32H7xx_HAL_Driver/Src/: stm32h7xx_hal_mmc.c
MBEDTLS/App/: mbedtls.c  mbedtls.h  mbedtls_config.h
cmake/: gcc-arm-none-eabi.cmake
cmake/stm32cubemx/: CMakeLists.txt
